# seqan3

./: .clang-format  .cmake-format.yaml  .codecov.yml  .editorconfig  .gitignore  .gitmodules  .gitpod.yml  .jenkinsfile  .travis.yml  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE  LICENSE.md  PULL_REQUEST_TEMPLATE.md  README.md  concepts.hpp  pair.hpp  tuple.hpp  zip_view.hpp
include/seqan3/: CMakeLists.txt  alphabet.hpp  container.hpp  core.hpp  range.hpp  version.hpp
include/seqan3/align/: alignment.hpp
include/seqan3/alignment/: aligned_sequence_adaptor_constant_access.hpp  all.hpp  exception.hpp  pairwise_alignment_edit_distance_unbanded.hpp
include/seqan3/alphabet/: CMakeLists.txt  adaptation.hpp  all.hpp  alphabet.hpp  alphabet_base.hpp  alphabet_container.hpp  alphabet_sequence.hpp  composition.hpp  compound_alphabet.hpp  concept.hpp  concept_fwd.hpp  concept_pre.hpp  exception.hpp  hash.hpp  nucleotide.hpp  quality.hpp  range.hpp  test_phred.cpp  union_alphabet.hpp  view_convert.hpp
include/seqan3/argument_parser/: all.hpp  argument_parser.hpp  auxiliary.hpp  concept.hpp  exceptions.hpp  validators.hpp
include/seqan3/container/: concepts.hpp
include/seqan3/contrib/: README.md  sdsl-lite.hpp
include/seqan3/core/: add_enum_bitwise_operators.hpp  all.hpp  bit_manipulation.hpp  common_tuple.hpp  convert.hpp  core_concepts.hpp  core_concepts_detail.hpp  debug_stream.hpp  filesystem.hpp  iterator_concepts.hpp  iterator_concepts_detail.hpp  make_equality_comparable_with.hpp  math.hpp  meta.hpp  platform.hpp  pod_tuple.hpp  semiregular_box.hpp  tuple_utility.hpp  type_list.hpp
include/seqan3/io/: all.hpp  concept.hpp  exception.hpp  filesystem.hpp  record.hpp
include/seqan3/memory/: aligned_allocator.hpp  all.hpp
include/seqan3/range/: action.hpp  all.hpp  concept.hpp  container.hpp  hash.hpp  metafunction.hpp  shortcuts.hpp  utility.hpp  view.hpp
include/seqan3/search/: all.hpp  search.hpp  search_result.hpp  search_result_range.hpp
include/seqan3/simd/: all.hpp  concept.hpp  simd.hpp  simd_algorithm.hpp  simd_debug_stream.hpp  simd_traits.hpp
include/seqan3/std/: algorithm  all.hpp  bit  charconv  charconv_detail.hpp  concepts  filesystem  iterator  memory  new  ranges  span  span.hpp  type_traits
include/seqan3/type_traits/: core.hpp
include/seqan3/utility/: all.hpp  concept.hpp  math.hpp  tuple_utility.hpp
test/: CMakeLists.txt  Dockerfile.Debian  seqan3-test-config.cmake  seqan3-test.cmake
test/align/: CMakeLists.txt  alignment_class_test.cpp  alignment_test.cpp
test/alignment/: CMakeLists.txt  aligned_sequences_adaptor_constant_access_test.cpp
test/alphabet/: CMakeLists.txt  alphabet_test.cpp  aminoacid_test.cpp  nucleotide_test.cpp  structure_test.cpp  union_alphabet.cpp  union_alphabet_detail_test.cpp  union_alphabet_test.cpp  view_convert.cpp
test/alphabet/adaptation/: CMakeLists.txt  char_test.cpp  uint_test.cpp
test/alphabet/aminoacid/: CMakeLists.txt  aa27_container_test.cpp  aa27_sequence_test.cpp  aa27_test.cpp
test/alphabet/composition/: CMakeLists.txt  union_composition_detail_test.cpp  union_composition_test.cpp
test/alphabet/gap/: CMakeLists.txt  gap_test.cpp  gapped_alphabet_test.cpp  gapped_test.cpp
test/alphabet/nucleotide/: CMakeLists.txt  dna4_test.cpp  dna5_container_test.cpp  dna5_sequence_test.cpp  dna5_test.cpp  nucl16_container_test.cpp  nucl16_sequence_test.cpp  nucl16_test.cpp  rna4_container_test.cpp  rna4_test.cpp  rna5_test.cpp
test/alphabet/quality/: CMakeLists.txt  composition_test.cpp  illumina18_test.cpp  phred_test.cpp  quality_composition_test.cpp
test/analyse/: CMakeLists.txt
test/api_stability/: CMakeLists.txt  README.md  REUSE.toml
test/api_stability/3.0.2/: 0001-NOAPI-Disable-Werror.patch  0002-NOAPI-DETAIL-MISC-Remove-top-level-scoring-scheme-de.patch  0003-NOAPI-INCLUDE-add-missing-include-bi_fm_index.patch  0004-NOAPI-INCLUDE-add-missing-include-gap-gapped.patch  0005-NOAPI-DETAIL-MISC-rename-detail-char_predicate_-comb.patch  0006-NOAPI-DETAIL-FIX-renaming-config_element_specialisat.patch  0007-NOAPI-DETAIL-FIX-renaming-strong_type_specialisation.patch  0008-NOAPI-INCLUDE-add-missing-include-detail-sizeof_bits.patch  0009-NOAPI-INCLUDE-add-missing-include-sdsl-bits.patch  0010-API-WRONG-USAGE-MISC-Simplify-the-pipe-operator-for-.patch  0011-API-BREAKAGE-MISC-adjusting-seqan3_version-semantics.patch  0011-API-BREAKAGE-MISC-adjusting-seqan3_version-semantics.patch.license  0012-NOAPI-INCLUDE-add-missing-include-seqan3-debug_strea.patch  (+27 more)
test/cmake/: add_subdirectories.cmake  seqan3_generate_snippet.cmake  seqan3_macro_benchmark.cmake  seqan3_path_longest_stem.cmake  seqan3_require_benchmark.cmake  seqan3_require_ccache.cmake  seqan3_require_test.cmake  seqan3_test_component.cmake  seqan3_test_files.cmake
test/container/: CMakeLists.txt  ra_iterator_test.cpp  random_access_iterator_test.cpp
test/core/: CMakeLists.txt  convert_test.cpp  pod_tuple_test.cpp
test/coverage/: CMakeLists.txt
test/documentation/: CMakeLists.txt  DoxygenLayout.xml  README.md  api-stability.js  doc_test.py  seqan3-doxygen-copy-and-replace.cmake  seqan3-doxygen-layout.cmake  seqan3-doxygen-package.cmake  seqan3-doxygen.cmake  seqan3.css  seqan3_dark.css  seqan3_doxygen_cfg.in  seqan3_footer.html  seqan3_footer.html.in  seqan3_header.html  version.js  version.php
test/external_project/: CMakeLists.txt  find-package-diagnostics.cmake  install-seqan3.cmake  install-sharg.cmake  use-cmake3.4.cmake  use-cmake3.5.cmake
test/header/: CMakeLists.txt  generate_header_source.cmake
test/io/: CMakeLists.txt
test/macro_benchmark/: CMakeLists.txt
test/memory/: CMakeLists.txt
test/performance/: CMakeLists.txt
test/scripts/: add_snippets_to_cookbook.sh  amalgamate-sdsl.sh  check_include_order.pl  check_markdown_doxygen.sh  create_all_hpp.sh  link_check.sh  update_copyright.sh
test/snippet/: CMakeLists.txt  compare_snippet_output.cmake  snippet_main.cpp
test/test_utility/: tmp_filename.hpp
test/unit/: CMakeLists.txt
(+3432 files in other folders)
